[package]
name = "single-image"
version = "0.1.0"
description = "A local-first photo review and deduplication app"
authors = ["yuanll"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "single_image_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.6.0"
anyhow = "1.0.100"
blake3 = "1.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png", "webp"] }
ndarray = "0.16"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries", "tls-rustls", "std", "ndarray", "copy-dylibs", "api-24"] }
rayon = "1.11.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.9"
tempfile = "3.23.0"
trash = "5.2.5"
walkdir = "2.5.0"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }
